--- a/assets/css/templatemo-space-dynamic.css
+++ b/assets/css/templatemo-space-dynamic.css
@@ -28,7 +28,7 @@ Table of contents
 font & reset css
 --------------------------------------------- 
 */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&amp;display=swap');
 /* 
 ---------------------------------------------
 reset
